<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#330000"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Predictions" >

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textViewLabelName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:textColor="#FFFF00"
                android:textStyle="bold|italic" />

            <TextView
                android:id="@+id/textViewName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#FFFFFF" />

            <TextView
                android:id="@+id/textViewLabelPsychic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/psychic"
                android:textColor="#FFFF00"
                android:textStyle="bold|italic" />

            <TextView
                android:id="@+id/textViewPsychic"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#FFFFFF" />

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/textViewLabelDestiny"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/destiny"
                android:textColor="#FFFF00"
                android:textStyle="bold|italic" />

            <TextView
                android:id="@+id/textViewDestiny"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#FFFFFF" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>